@@ -1,3 +1,9 @@
+2002-12-28  Neil Jerram  <neil@ossau.uklinux.net>
+
+	* boot-9.scm (module-defined-hook): New hook, run whenever a new
+	module is defined.
+	(process-define-module): Run this hook.
+
 2002-12-18  Mikael Djurfeldt  <mdj@kvast.blakulla.net>
 
 	* threads.scm: Removed bogus definition of future-ref.
